# test_icp_run_standalone

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
config/: icp_run_config.json  icp_run_config.jsonc
include/: HVCloudPairICP.h  HVI18n.h  HVUtils.h  ICPCore.h
include/public/: 3d_pilot_data_define.h  3d_pilot_public_def.h  3d_pliot_error.h  canvas_manager.h  geometry_def.h  node_engine.h  param_meta_data.h
src/: HVCloudPairICP.cpp  HVI18n.cpp  HVUtils.cpp  ICPCore.cpp  main.cpp
